# SM-Adviser

./: .dockerignore  .env.example  .gitignore  BUILD_PLAN.md  CLAUDE.md  Dockerfile  PROTOCOL.md  README.md  RESEARCH_DECISION_METHODS.md  SELF_HOSTING.md  Zerodha_Indian_Market_Portfolio_Agent_Spec.docx  alembic.ini  config.example.yaml  docker-compose.yml  pyproject.toml  theses.example.yaml
.github/workflows/: ci.yml
app/: __init__.py  config.py  domain.py
app/analytics/: fundamentals.py  news.py  order_flow.py  screening.py  technicals.py
app/api/: main.py  schemas.py  version.py
app/auth/: kite_login.py
app/backtest/: engine.py
app/connectors/: __init__.py  base.py  fundamentals.py  fundamentals_universe.py  market_data.py  mock.py  mock_portfolio.json  news.py  order_flow.py  zerodha.py
app/jobs/: intraday_refresh.py  morning_run.py  weekly_screen.py
deploy/: README.md  sm-adviser-intraday.service  sm-adviser-intraday.timer  sm-adviser-morning.service  sm-adviser-morning.timer  sm-adviser-weekly.service  sm-adviser-weekly.timer  sync-to-nuc.sh
docs/: openapi.json
migrations/: env.py
tests/: conftest.py  test_api.py  test_backtest.py  test_candidates_api.py  test_fundamentals.py  test_guardrails.py  test_kite_login.py  test_market_data.py  test_mock_connector.py  test_models.py  test_morning_run.py  test_narrative.py  test_news.py  test_order_flow.py  test_reports.py  test_scoring.py  test_screen_llm.py  test_screening.py  test_signals.py  test_status.py  test_technicals.py  test_universe.py  test_weekly_screen.py  test_zerodha_connector.py
(+67 files in other folders)
