[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-agent"
version = "2.0.0"
description = "Private read-only daily portfolio intelligence agent for the Indian market (Zerodha/Kite)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Sharath" }]

# Core deps — enough to run Phase 0 (mock pipeline + SQLite) with zero external services.
dependencies = [
    "SQLAlchemy>=2.0",
    "alembic>=1.13",
    "PyYAML>=6.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
# Phase 1+ — added as each phase lands, kept out of the core install so Phase 0 stays light.
connectors = ["kiteconnect>=5.0", "pyotp>=2.9", "httpx>=0.27"]
analytics = ["pandas>=2.2", "numpy>=1.26"]
marketdata = ["yfinance>=0.2"]   # free EOD candles; swappable for paid Kite historical later
fundamentals = ["httpx>=0.27", "beautifulsoup4>=4.12"]   # free screener.in scrape; swappable
api = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
llm = ["anthropic>=0.40"]
research = ["httpx>=0.27", "beautifulsoup4>=4.12", "feedparser>=6.0"]
postgres = ["psycopg[binary]>=3.1"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4"]

[project.scripts]
morning-run = "app.jobs.morning_run:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
